--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   # easy_localization: ^3.0.7+1
   font_awesome_icon_class: ^0.0.6
+  cached_network_image: ^3.4.1
   # translator: ^1.0.3+1
   provider: ^6.1.4
   # audioplayers: ^6.4.0
@@ -51,9 +52,14 @@ dependencies:
   # minimal: ^0.0.1
   # flutter_screenutil: ^5.9.3
   # auto_size_text: ^3.0.0
-  google_mobile_ads: ^6.0.0
+  google_mobile_ads: ^5.2.0
   in_app_purchase: ^3.2.1
   dio: ^5.8.0+1
+  just_audio: ^0.10.2
+  path_provider: ^2.1.5
+  http: ^1.4.0
+  shared_preferences: ^2.5.3
+  flutter_launcher_icons: ^0.14.3
   # flutter_3d_ar_converter: ^0.1.1
 dev_dependencies:
   flutter_test:
@@ -65,6 +71,13 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  remove_alpha_ios: true
+  transparent: true
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
