--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ dependencies:
   http: ^1.4.0
   shared_preferences: ^2.5.3
   flutter_launcher_icons: ^0.14.3
+  animations: ^2.0.11
   # flutter_3d_ar_converter: ^0.1.1
 dev_dependencies:
   flutter_test:
@@ -90,8 +91,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets: 
+    - assets/
     - assets/images/ 
-    - assets/translations/
+    - assets/fonts/
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
@@ -105,15 +107,15 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
+  fonts:
+    - family: Aero
+      fonts:
+        - asset: assets/fonts/aero.ttf
   #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+    - family: Avenir
+      fonts:
+        - asset: assets/fonts/Avenir.otf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
