ads controlled only shows when two category clicked

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
 
 
     <application
-        android:label="ilearn_papiamento"
+        android:label="Learn Papiamento"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
