--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_launcher_icons: ^0.14.3
   animations: ^2.0.11
+  connectivity_plus: ^6.1.4
   # flutter_3d_ar_converter: ^0.1.1
 dev_dependencies:
   flutter_test:
