--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   animations: ^2.0.11
   connectivity_plus: ^6.1.4
+  collection: ^1.19.1
   # flutter_3d_ar_converter: ^0.1.1
 dev_dependencies:
   flutter_test:
